<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_anime"
        android:icon="@drawable/ic_anime"
        android:title="@string/title_anime" />

    <item
        android:id="@+id/navigation_manga"
        android:icon="@drawable/ic_manga"
        android:title="@string/title_manga" />

    <item
        android:id="@+id/navigation_bookmarks"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/title_bookmarks" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />
</menu> 